idea/testData/multiModuleHighlighting/multiplatform/transitive/common/common.kt
<error descr="[NO_ACTUAL_FOR_EXPECT] Expected function 'foo' has no actual declaration in module jvm_base for JVM">expect fun foo(): Int</error>